# xplantector

./: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/xplantector/: __init__.py  cli.py
src/xplantector/core/: feature_extraction.py  preprocess.py
src/xplantector/models/: base.py
tests/: __init__.py  test_xplantector.py
